# hubspace-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  publish.sh  pyproject.toml
src/hubspace/: __init__.py  hubspace.py  hubspace_device.py  hubspace_user.py  util.py
src/tests/: credentials.py  tests_hubspace.py  tests_hubspace_device.py  tests_hubspace_user.py  tests_main.py
