
[project]
name = "hubspace"
version = "1.1.0"
readme = "README.md"
authors = [{ name = "Leyla Becker", email = "git@jan-leila.com" }]
license = { file = "LICENSE" }
keywords = ["hubspace", "iot"]

[project.urls]
Homepage = "https://github.com/jan-leila/hubspace-py"

[build-system]
requires = ["requests==2.27.1"]